更新流程设计图及说明

--- a/doc/流程设计-更改.md
+++ b/doc/流程设计-更改.md
@@ -16,7 +16,7 @@
 * 启动该流程之后，进入到“学生互评”用户任务，该任务的办理人为参与互评的某个学生。同时还会给该办理人发送邮件。
 * 流程结束：
     + 当“学生互评”用户任务被其办理人按时完成时流程结束
-    + 当“学生互评”用户任务的办理人超时会完成时，进入到“未参加互评邮件提醒”活动，然后流程结束
+    + 当“学生互评”用户任务的办理人超时未完成时，进入到“未参加互评邮件提醒”活动，然后流程结束
     
     
 ## 1. 允许学生申诉的流程
@@ -32,10 +32,10 @@
 
 其中“成绩审核”子流程的流程图如下：
 
-![peerassessment.png](./pictures/peerassessment.png)
+![verifyProcess.png](./pictures/verifyProcess.png)
 * 流程启动条件：由上面“审核成绩”活动调用启动
 * 启动该流程之后，进入到“学生”用户任务，该任务的办理人为参与互评某个的学生。同时还会给该办理人发送邮件。
 * 流程结束：
     + 当“学生互评”用户任务被其办理人按时完成时，进入到下一个“老师审核”任务，该任务办理人为“教师”角色。当“老师审核”任务完成之后，流程结束。
-    + 当“学生互评”用户任务的办理人超时会完成时，进入到“未参加互评邮件提醒”活动，然后流程结束
+    + 当“学生互评”用户任务的办理人超时未完成时，进入到“未参加互评邮件提醒”活动，然后流程结束
     
