--- a/doc/系统设计.md
+++ b/doc/系统设计.md
@@ -21,11 +21,62 @@
 
 ![登陆对接](pictures/登陆对接.png)
 
+登陆对接大致可以分为三个步骤，具体每步如何工作的如下：
+* 调用登陆对接接口：在用户进入互评系统之前，open edX系统会先调用互评系统提供的对接接口 **api/common/loginAbutment**，参数格式
+为：
+```
+{
+  "email": "",
+  "userName": "",
+  "userType": "",
+  "signature": ""
+}
+```
+其中email、userName、userType为用户的基本信息，通过userType可以判断用户是否为管理员用户，然后将基本信息还有事先约定好的
+密钥按照一定的规则拼接起来，最后用sha256算法进行签名生成signature，这样可以防止其他人恶意登陆。
+
+* 互评系统处理登陆信息：在接收到open edX传来的登录信息之后，互评系统会按照事先约定的规则将用户信息以同样的方式进行签名操作，
+然后校验signature，如果相同则生成一个唯一的uuid，然后以uuid为key将用户信息放到redis中，并设置uuid的过期时间为3s,
+因为整个对接过程基本在一瞬间就能完成，这里过期时间设置的短一点可以防止非法用户通过抓包拿到数据后进行重放攻击。
+
+* 页面请求：前面两个步骤进行了登陆对接，互评系统也拿到了用户信息，现在用户可以正式访问互评了，这时open edX 只需要将上一步得
+到的uuid作为参数GET请求相应的页面，互评系统这里会先通过自定义的拦截器检测session中是否有用户信息，如果没有则检测请求参数中
+是否存在uuid，如果存在则去redis中取出用户信息，然后将所有信息存入到session中，最后返回相应的页面，至此整个登陆对接都已经完成了，
+现在用户在互评系统中的所有操作就和在open edX一致了。
+
+## 3. 教师模块
+在整个互评系统中存在管理员和学生两种用户角色，教师默认管理员权限，具有流程部署、学生成绩查看、处理学生成绩审核、接口
+调用日志以及邮件发送日志查看等功能，下面详细介绍流程部署以及处理学生成绩审核请求的具体实现。
+
+#### 3.1 流程部署
+在互评系统中，每部署一个题目就相当于部署了一个流程，这里流程的部分变量是可选的，比如可以部署一个不允许学生提出
+老师审核成绩的题目（默认允许），下面是一个流程的具体字段：
+
+```
+{
+  "courseName": "题目",
+  "courseCode": "题号",
+  "isAppeal": "是否允许学生申诉",
+  "distributeMaxUser": "开始互评人数",
+  "timeout": "超时时间",
+  "assessmentMinTimeSlot": "最小间隔时间",
+  "assessmentMaxTimeSlot": "最大间隔时间"
+}
+```
+通过题号可以确定改题目在GitHub的地址，当学生答题的时候构造相应的地址去GitHub拿到题目，
+其中distributeMaxUser该字段表示当人数达到这个值的时候将这些用户放到一个组里面表示这些用户可以进行
+互评了，timeout表示当一个用户启动他对应的互评流程时经过多长时间没有互拼则自动结束该流程，
+assessmentMinTimeSlot与assessmentMaxTimeSlot是为了当答题人数达到distributeMaxUser时需要检测
+这一批人提交作业的时间间隔是否在上面这个时间段内，防止集体作弊。
+
+当上面的字段都满足条件的时候一个流程就部署完成了，此时用户便可以在答题界面看到已经部署的题目了，这里当用户访问题目的
+时候因为之前部署的时候只部署了题号，这个时候会构造url去GitHub上面访问题目相关信息，这里为了性能考虑将题目信息存到redis+ehcache缓存
+中，极大的提高了访问速度。
+
+#### 3.2 处理学生成绩审核请求
 
 
-## 3. 流程部署模块
-
-## 4. 答题互评模块
+## 4. 学生模块
 
 ## 5. 作业分配算法
 
