--- a/doc/系统设计.md
+++ b/doc/系统设计.md
@@ -15,7 +15,27 @@
 | 前端框架      | Layui + Bootstrap + Echarts |
 | 版本控制      | git |
 
-## 2. 登陆对接模块
+## 2. 总体架构
+互评系统主体框架基于spring boot，结合activiti、Mybatis、Kafka、redis以及前端layui框架等技术，整个系统各个组件之间的
+调用关系如下图所示：
+
+![架构图](pictures/架构图.png)
+
+整个系统主体分为5个部分，包括客户端、restful接口、缓存、消息队列以及数据库，当客户端请求资源时，首先调用相应的资源
+接口，然后根据实际业务情况如果用到缓存则首先到ehcache中找相应的缓存，如果ehcache里面未命中则去redis里面找，要是还没有
+命中则直接查数据库然后将返回的结果加入到缓存中供下次请求使用。本系统因为涉及到很多自动化任务（如作业分配、群发邮件、作业以及打分情况
+保存到gitlab中），而这些任务大部分都是网络IO，如果直接放到主线程中会导致线程堵塞使整个系统延时非常大，所以本系统中引入了消息队列作为中间件，
+而且单独配置了一个线程池供所有的异步任务使用，这样做的结果就是目前整个系统处理请求的速度非常快。
+
+activiti工作流引擎在本系统中处于最核心的位置，所有的操作都是按照之前定义好的流程图来执行的，在本系统中将activiti-spring整合起来，依靠着
+spring框架的依赖注入优势，使得整个开发变得比较简单。在本系统中主要用到了一下两个流程图实例，分别为不允许学生申诉和允许学生申诉的流程：
+
+![nojudgement.png](pictures/nojudgement.png)
+
+
+![judgement.png](pictures/judgement.png)
+
+## 3. 登陆对接模块
 互评系统相对于整个Open edX 平台是一个独立的模块，要想和edX对接起来协同工作就必须沿用同一套账户体系，所以在用户进入互评
 系统之前必须先进行登陆对接，将edX中用户的账户信息传递给互评系统，相当于QQ的第三方授权登陆一样，具体登陆对接流程如下所示:
 
@@ -44,11 +64,11 @@
 是否存在uuid，如果存在则去redis中取出用户信息，然后将所有信息存入到session中，最后返回相应的页面，至此整个登陆对接都已经完成了，
 现在用户在互评系统中的所有操作就和在open edX一致了。
 
-## 3. 教师模块
+## 4. 教师模块
 在整个互评系统中存在管理员和学生两种用户角色，教师默认管理员权限，具有流程部署、学生成绩查看、处理学生成绩审核、接口
 调用日志以及邮件发送日志查看等功能，下面详细介绍流程部署以及处理学生成绩审核请求的具体实现。
 
-#### 3.1 流程部署
+#### 4.1 流程部署
 在互评系统中，每部署一个题目就相当于部署了一个流程，这里流程的部分变量是可选的，比如可以部署一个不允许学生提出
 老师审核成绩的题目（默认允许），下面是一个流程的具体字段：
 
@@ -73,12 +93,10 @@ assessmentMinTimeSlot与assessmentMaxTimeSlot是为了当答题人数达到distr
 时候因为之前部署的时候只部署了题号，这个时候会构造url去GitHub上面访问题目相关信息，这里为了性能考虑将题目信息存到redis+ehcache缓存
 中，极大的提高了访问速度。
 
-#### 3.2 处理学生成绩审核请求
+#### 4.2 处理学生成绩审核请求
 
 
-## 4. 学生模块
-
-## 5. 作业分配算法
+## 5. 学生模块
 
 ## 6. RESTful 接口
 
