--- a/doc/系统设计.md
+++ b/doc/系统设计.md
@@ -101,3 +101,38 @@ assessmentMinTimeSlot与assessmentMaxTimeSlot是为了当答题人数达到distr
 ## 6. RESTful 接口
 
 ## 7. 邮件提醒模块
+
+## 8.作业分配
+作业分配实现伪代码如下所示：
+   ``` java
+    /**
+     * 作业分配算法
+     *
+     * @param emailList 学生待分配学生列表
+     * @return 分配结果集合
+     */
+    public Map<String, List> distributeTask(List<String> emailList) {
+        Map<String, List> resultMap = new HashMap<>();
+        int times = 4;
+        int count = emailList.size();
+        Collections.shuffle(emailList);
+        emailList.forEach(email -> {
+            int stuId = emailList.indexOf(email);
+            List<String> list = new ArrayList<>();
+            for (int i = 1; i <= times; i++) {
+                int id = stuId + i;
+                int result = id >= count ? id - count : id;
+                list.add(emailList.get(result));
+            }
+            resultMap.put(email, list);
+        });
+        return resultMap;
+    }
+ ```
+
+ 如上代码所述，首先将需要作业分配的所有学生的email作为一个list集合，然后将学生顺序打乱，
+ 防止多名学生同时提交互评到对方的作业，接着依次遍历集合里面的每个元素，因为邮件地址是唯一的所以这里
+ 直接用emai索引作为学生的id，然后根据预先设定的每个学生评论作业的份数times分配这名学生id后面的
+ times个学生作为互评对象，这里需要注意的是当学生位于列表的后times以内的位置时得依次取队列
+ 最前面对应位置的学生作为互评对象，这样就把所有学生的互评任务都分配完了，左后返回一个map对应着分配结果。
+
