--- a/doc/系统设计.md
+++ b/doc/系统设计.md
@@ -112,15 +112,22 @@ assessmentMinTimeSlot与assessmentMaxTimeSlot是为了当答题人数达到distr
      * @return 分配结果集合
      */
     public Map<String, List> distributeTask(List<String> emailList) {
+        //返回分配结果集
         Map<String, List> resultMap = new HashMap<>();
+        // 每个学生需要批改的份数
         int times = 4;
         int count = emailList.size();
+        // 打乱学生顺序
         Collections.shuffle(emailList);
+        // 循环遍历
         emailList.forEach(email -> {
+            // 取到学生Email对应的id
             int stuId = emailList.indexOf(email);
             List<String> list = new ArrayList<>();
+            // 依次取后times个学生作为互评对象
             for (int i = 1; i <= times; i++) {
                 int id = stuId + i;
+                // 避免空指针异常并取到正确的互评对象
                 int result = id >= count ? id - count : id;
                 list.add(emailList.get(result));
             }
