--- a/doc/系统设计.md
+++ b/doc/系统设计.md
@@ -127,6 +127,13 @@ assessmentMinTimeSlot与assessmentMaxTimeSlot是为了当答题人数达到distr
 
 
 ## 7. 邮件提醒模块
+整个互评系统中在学生提交作业、学生参与互评、学生成绩发布以及一些其他的系统通知时都需要向学生或者
+教师发送邮件，具体邮件功能的采用spring boot的 **spring-boot-starter-mail**模块实现。但是邮件发送属于IO操作，
+这收网络环境影响非常大并且同步的IO操作会堵塞主线程，
+经过测试如果采用同步方式进行邮件服务每次请求大概需要消耗4~5s的时间，而采用异步方式可将响应时间
+缩短为150ms左右，性能提升非常明显。考虑邮件发送的并发数量可能会很高，如果同时开很多线程进行的话
+对整个服务也会造成较大的压力，所以系统使用Kafka作为消息中间件，将邮件放入消息队列中，最后由消费者将消息
+取出慢慢的发送邮件，引入消息中间件可以极大的减轻系统的负荷，同时也使得邮件发送更加高效。
 
 ## 8.作业分配
 作业分配实现伪代码如下所示：
