--- a/doc/系统设计.md
+++ b/doc/系统设计.md
@@ -135,6 +135,14 @@ assessmentMinTimeSlot与assessmentMaxTimeSlot是为了当答题人数达到distr
 对整个服务也会造成较大的压力，所以系统使用Kafka作为消息中间件，将邮件放入消息队列中，最后由消费者将消息
 取出慢慢的发送邮件，引入消息中间件可以极大的减轻系统的负荷，同时也使得邮件发送更加高效。
 
+| 接口        | 说明  | 加缓存前响应时间  | 加缓存后响应时间  |
+| ------------- |:-------------:|:-------------:|:-------------:|
+| /api/common/getQAContent        | 从GitHub取题目  | 2880ms  | 15ms  |
+
+| 接口        | 说明  | 同步调用响应时间  | 异步调用响应时间（Kafka+async）|
+| ------------- |:-------------:|:-------------:|:-------------:|
+| /api/user/commitWork| 学生提交作业并发送邮件同时作业提交gitlab  | 113500ms  | 134ms  |
+
 ## 8.作业分配
 作业分配实现伪代码如下所示：
    ``` java
